wtx-macros-tests/tests/fail/bad_params.stderr
error: Parameters must end with the `Params` suffix.
 --> tests/fail/bad_params.rs:5:14
  |
5 |   pub struct Rfewr;
  |              ^^^^^

error: aborting due to 1 previous error

